<resources>

    <string name="host_uri">http://192.168.2.105:8080/shakewebservice/api</string>
    <string name="app_name">shakeandroidclient</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">用户名</string>
    <string name="username_hint">6-位必须包含字母</string>
    <string name="password_hint">6-位字母或者数字</string>
    <string name="psw">密 \u0020\u0020码</string>
    <string name="app_picker_name">应用</string>
    <string name="bookmark_picker_name">书签</string>
    <string name="button_add_calendar">添加事件至日历</string>
    <string name="button_add_contact">添加联系人</string>
    <string name="button_back">返回</string>
    <string name="button_book_search">打开图书搜索</string>
    <string name="button_cancel">取消</string>
    <string name="button_clipboard_empty">清空剪切板</string>
    <string name="button_custom_product_search">自定义搜索</string>
    <string name="button_dial">拨号</string>
    <string name="button_done">完成</string>
    <string name="button_email">发送email</string>
    <string name="button_get_directions">获取地址</string>
    <string name="button_google_shopper">谷歌购物</string>
    <string name="button_mms">发送彩信</string>
    <string name="button_ok">确定</string>
    <string name="button_open_browser">打开浏览器</string>
    <string name="button_product_search">打开产品搜索</string>
    <string name="button_search_book_contents">搜索图书内容</string>
    <string name="button_share_app">共享应用</string>
    <string name="button_share_bookmark">分享书签</string>
    <string name="button_share_by_email">通过email分享</string>
    <string name="button_share_by_sms">通过短信分享</string>
    <string name="button_share_clipboard">分享剪切板</string>
    <string name="button_share_contact">分享联系人</string>
    <string name="button_show_map">显示地图</string>
    <string name="button_sms">发送短信</string>
    <string name="button_web_search">网页搜索</string>
    <string name="button_wifi">连接到网络</string>
    <string name="contents_contact">联系人信息</string>
    <string name="contents_email">Email地址</string>
    <string name="contents_location">地理坐标</string>
    <string name="contents_phone">电话号码</string>
    <string name="contents_sms">短信地址</string>
    <string name="contents_text">纯文本</string>
    <string name="history_clear_one_history_text">删除</string>
    <string name="history_clear_text">删除历史</string>
    <string name="history_email_title">条码扫描器历史</string>
    <string name="history_empty">空的</string>
    <string name="history_empty_detail">没有条码扫描已记录</string>
    <string name="history_send">发送历史</string>
    <string name="history_title">历史</string>
    <string name="menu_about">关于</string>
    <string name="menu_encode_mecard">使用MECARD</string>
    <string name="menu_encode_vcard">使用vCard</string>
    <string name="menu_help">帮助</string>
    <string name="menu_history">历史</string>
    <string name="menu_settings">设置</string>
    <string name="menu_share">分享</string>
    <string name="msg_about">基于ZXing开源条码引擎</string>
    <string name="msg_bulk_mode_scanned">批量扫描：找到条码，已保存</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="msg_default_format">格式</string>
    <string name="msg_default_meta">元数据</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">请将条码置于取景框内扫描。</string>
    <string name="msg_default_time">时间</string>
    <string name="msg_default_type">类型</string>
    <string name="msg_encode_contents_failed">无法根据已有数据生成条码。</string>
    <string name="msg_google_books">谷歌图书</string>
    <string name="msg_google_product">谷歌购物</string>
    <string name="msg_google_shopper_missing">谷歌购物未安装</string>
    <string name="msg_install_google_shopper">谷歌购物是一款将条码扫描和商品比价相结合的应用，谷歌购物不使用浏览器，您想尝试吗？</string>
    <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
    <string name="msg_redirect">重定向</string>
    <string name="msg_sbc_book_not_searchable">抱歉，无法找到此图书。</string>
    <string name="msg_sbc_failed">抱歉，搜索时遇到错误。</string>
    <string name="msg_sbc_no_page_returned">无页面返回</string>
    <string name="msg_sbc_page">页面</string>
    <string name="msg_sbc_searching_book">搜索图书…</string>
    <string name="msg_sbc_snippet_unavailable">摘录不可用</string>
    <string name="msg_sbc_unknown_page">未知页面</string>
    <string name="msg_share_explanation">您可以通过在自己的手机上显示条码，并使用其它手机扫描此条码的方式进行分享</string>
    <string name="msg_share_subject_line">这是我所扫描条码的内容</string>
    <string name="msg_share_text">或键入一些文字</string>
    <string name="msg_sure">你肯定吗？</string>
    <string name="msg_unmount_usb">抱歉，SD卡不可访问。</string>
    <string name="preferences_actions_title">找到条码时</string>
    <string name="preferences_bulk_mode_summary">连续扫描并保存多个条形码</string>
    <string name="preferences_bulk_mode_title">批量扫描模式</string>
    <string name="preferences_copy_to_clipboard_title">复制到剪切板</string>
    <string name="preferences_custom_product_search_summary">替换：％s=内容，％f=格式，％t=类型</string>
    <string name="preferences_custom_product_search_title">自定义搜索网址</string>
    <string name="preferences_decode_1D_title">扫描 一维条码</string>
    <string name="preferences_decode_Data_Matrix_title">扫描 DM码</string>
    <string name="preferences_decode_QR_title">扫描 QR码</string>
    <string name="preferences_front_light_summary">前灯可用时，打开前灯</string>
    <string name="preferences_front_light_title">前灯</string>
    <string name="preferences_general_title">一般设置</string>
    <string name="preferences_name">设置</string>
    <string name="preferences_play_beep_title">提示音</string>
    <string name="preferences_remember_duplicates_summary">在历史记录中保存重复记录</string>
    <string name="preferences_remember_duplicates_title">记住重复</string>
    <string name="preferences_result_title">结果设置</string>
    <string name="preferences_reverse_image_summary">设备上启用了前置摄像头只</string>
    <string name="preferences_reverse_image_title">反转摄像机的图像</string>
    <string name="preferences_scanning_title">条码类型选择</string>
    <string name="preferences_search_country">搜索国家</string>
    <string name="preferences_supplemental_summary">尝试检索关于条码内容的更多信息</string>
    <string name="preferences_supplemental_title">检索更多信息</string>
    <string name="preferences_vibrate_title">振动</string>
    <string name="result_address_book">找到联系人信息</string>
    <string name="result_calendar">找到日历事件</string>
    <string name="result_email_address">找到email地址</string>
    <string name="result_geo">找到地理坐标</string>
    <string name="result_isbn">找到图书</string>
    <string name="result_product">找到产品</string>
    <string name="result_sms">找到短信地址</string>
    <string name="result_tel">找到电话号码</string>
    <string name="result_text">找到纯文本</string>
    <string name="result_uri">找到URL</string>
    <string name="result_wifi">发现网络配置</string>
    <string name="sbc_name">Google图书搜索</string>
    <string name="share_name">通过条码分享</string>
    <string name="title_about">条码扫描器</string>
    <string name="wifi_changing_network">请求连接到网络…</string>
    <string name="wifi_ssid_label">网络SSID</string>
    <string name="wifi_type_label">类型</string>
    <string name="zxing_url">http://code.google.com/p/zxing</string>
    <string name="webaddress">官方网站</string>
    <string name="copyright">©2011-2012 Lensoon</string>
    <string name="weibo">关注我们</string>
    <string name="main_tip">提醒</string>
    <string name="main_friends">\u0020\u0020好友</string>
    <string name="main_gift">礼品列表</string>
    <string name="main_manage">管理</string>
    <string name="manage_feedback">\u0020\u0020意见反馈</string>
    <string name="manage_weibo">\u0020\u0020官方微博</string>
    <string name="manage_option">\u0020\u0020系统设置</string>
    <string name="manage_check">\u0020\u0020检测更新</string>
    <string name="manage_about">\u0020\u0020关于我们</string>
    <string name="manage_help">\u0020\u0020帮助</string>
    <string name="manage_exit">\u0020\u0020退出当前帐号</string>
    <string name="manage_login">\u0020\u0020登录</string>
    <string name="manage_register">\u0020\u0020注册</string>
    <string name="praise_yao">\u0020\u0020摇一摇，得大奖</string>
    <string name="person_friend">所有好友</string>
    <string name="business_friend">企业好友</string>
    <string name="pull_to_refresh_pull_label">拉动可以刷新...</string>
    <string name="pull_to_refresh_release_label">松开刷新数据...</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">拉动刷新数据...</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="login_now"><u>马上登录>></u></string>
    <string name="skip"><u>跳过>></u></string>
    <string name="bindingphone">绑定手机</string>
    <string name="binding">认 \u0020证</string>
    <string name="phonenumber">手机号码</string>
    <string name="phone">本机手机号码</string>
    <string name="userinfo">个人资料</string>
    <string name="userinfo_edit">修改信息</string>
    <string name="edit_avatar">修改头像</string>
    <string name="my_gift_library">我的礼品库</string>
    <string name="manage_message">\u0020\u0020消息中心</string>
    <string name="manage_share">\u0020\u0020分享给好友</string>
    <string name="manage_share_sms">\u0020\u0020免费短信分享</string>
    <string name="manage_share_sina">\u0020\u0020新浪微博分享</string>
    <string name="manage_share_tencent">\u0020\u0020绑定腾讯微博</string>
    <string name="imageview">查看图片</string>
    <string name="card_manage">\u0020\u0020会员卡管理</string>
    <string name="message">消息中心</string>
    <string name="push_preference">推送设置</string>
    <string name="allow_push">接受推送</string>
    <string name="find">查找</string>
    <string name="addsupplier">添加会员卡</string>
    <string name="findsupplier">查找商家</string>
    <string name="main_friends_contact">通讯录好友</string>
    <string name="main_friends_yolipai">摇摇有礼好友</string>
    <string name="main_friends_weibo">腾讯微博好友</string>
    <string name="login_sina_weibo">新浪微博登陆</string>
    <string name="login_tencent_weibo">腾讯微博登陆</string>
    <string name="find_psw">找回密码</string>
    <string name="near_action">附近活动</string>
    <string name="store_detail">门店详情</string>
    <string name="action_name">活动名称:</string>
    <string name="action_time">活动时间:</string>
    <string name="action_detail">活动详情:</string>
    <string name="action_supplier">商家名称:</string>
    <string name="action_tel">电话:</string>
    <string name="action_call_phone">拨打电话</string>
    <string name="action_take_map">查看地图</string>
    <string name="friend_select">选择好友</string>
    <string name="btn_back">返回</string>
    <string name="gift_detail">礼品详情</string>
    <string name="attention">注意</string>
    <string name="delete_all">是否要删除这条微博？</string>
    <string name="ok">是</string>
    <string name="cancel">否</string>
    <string name="hello">Hello World, TextActivity!</string>
    <string name="send">发送</string>
    <string name="close">关闭</string>
    <string name="share_dialog_title">新浪微博</string>
    <string name="please_login">请登录！</string>
    <string name="send_sucess">分享成功！</string>
    <string name="send_failed">分享失败！</string>
    <string name="empty_str">列表信息为空！</string>
    <string name="friend_info">好友资料</string>
    <string name="friend_base_info">基本信息</string>
    <string name="friend_username_info">帐号信息</string>
    <string name="friend_interest">兴趣爱好</string>
    <string name="friend_sign">个人签名</string>
    <string name="friend_add">添加好友</string>
    <string name="friend_delete">删除好友</string>
    <string name="friendrequest">好友请求</string>

</resources>