<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="25.0dip" android:layout_marginRight="15.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText android:id="@+id/login_username_edit_text" android:background="@drawable/login_text_top" android:paddingLeft="80.0dip" android:saveEnabled="true" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="5.0dip" android:layout_marginTop="5.0dip" android:hint="@string/username_hint" />
    <TextView android:textSize="20.0dip" android:textColor="@color/login_edit_color" android:gravity="center_vertical" android:id="@+id/TextView01" android:paddingLeft="7.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:text="@string/username" android:layout_alignLeft="@+id/login_username_edit_text" android:layout_alignTop="@+id/login_username_edit_text" android:layout_alignBottom="@+id/login_username_edit_text" />
    <EditText android:id="@+id/login_password_edit_text" android:background="@drawable/login_text_bottom" android:paddingLeft="80.0dip" android:saveEnabled="true" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginLeft="5.0dip" android:hint="@string/password_hint" android:inputType="" android:layout_below="@+id/login_username_edit_text" />
    <TextView android:textSize="20.0dip" android:textColor="@color/login_edit_color" android:gravity="center_vertical" android:id="@+id/TextView02" android:paddingLeft="7.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/psw" android:layout_alignLeft="@+id/TextView01" android:layout_alignTop="@+id/login_password_edit_text" android:layout_alignBottom="@+id/login_password_edit_text" />
</RelativeLayout>