<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/login_bg" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@+id/titie_frame" style="@style/CustomerTitleFrame">
        <TextView android:id="@+id/title_text_view" android:text="@string/login" style="@style/Customer_Title_Text" />
        <Button android:background="@drawable/title_logo" android:layout_width="73.0dip" android:layout_marginLeft="5.0dip" style="@style/Customer_Back" />
    </FrameLayout>
    <include layout="@layout/login_layout" />
    <Button android:textSize="20.0sp" android:textColor="#ffffffff" android:layout_gravity="center_horizontal" android:id="@+id/login_btn" android:background="@drawable/login_btn_bg" android:layout_width="200.0dip" android:layout_height="35.0dip" android:layout_marginTop="20.0dip" android:text="@string/login" android:onClick="login" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="35.0dip" android:layout_marginBottom="10.0dip">
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:layout_marginRight="25.0dip">
            <TextView android:textSize="20.0dip" android:textColor="#ffe6427a" android:id="@+id/regist_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/regist" android:layout_alignParentLeft="true" />
            <TextView android:textSize="20.0dip" android:textColor="#ffcc0101" android:id="@+id/find_psw_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/find_psw" android:layout_alignParentRight="true" />
        </RelativeLayout>
        <ImageView android:background="@drawable/login_divider" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="10.0dip" />
</LinearLayout>